--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "kings",
   "version": "1.0.0",
   "description": "Notes on A Way Of Kings series",
+  "type": "module",
   "scripts": {
     "watch:sass": "node-sass sass/main.scss css/style.css -w",
     "devserver": "live-server",
